// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<Fragment>
  <ForwardRef(Box)
    sx={
      Object {
        "position": "relative",
      }
    }
  >
    <TriviaMap
      endToSelectPosition={[Function]}
      hiddenMarkerIds={Array []}
      newMarkerMode={false}
      onClickPostTitle={[Function]}
    />
    <FloatingButton
      color="primary"
      disabled={false}
      icon="add"
      onClick={[Function]}
    />
    <LoadingProgressBar />
  </ForwardRef(Box)>
  <BoxModal
    onClose={[Function]}
    open={false}
  />
  <DeletingConfirmModal
    onClickCancel={[Function]}
    onClickConfirm={[Function]}
    open={false}
  />
  <SwipeableEdgeDrawer
    bleedingHeight={56}
    edgeLabel={
      <CloseFormButton
        onClose={[Function]}
      />
    }
    edgeLabelWhenClosed="編集中"
    heightRatio={80}
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    show={false}
  >
    <ArticleForm
      onClickSelectPosition={[Function]}
    />
  </SwipeableEdgeDrawer>
  <GlobalMessage
    closeArticleModal={[Function]}
    closeFormModal={[Function]}
  />
  <ForwardRef(Dialog)
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(DialogTitle)>
      入力内容の変更が保存されていません。
    </ForwardRef(DialogTitle)>
    <ForwardRef(DialogContent)>
      <ForwardRef(DialogContentText)>
        現在編集中の投稿を「下書き保存」、「保存して公開」、または「編集を破棄」してからもう一度お試しください。
      </ForwardRef(DialogContentText)>
    </ForwardRef(DialogContent)>
    <ForwardRef(DialogActions)>
      <ForwardRef(Button)
        onClick={[Function]}
        variant="outlined"
      >
        閉じる
      </ForwardRef(Button)>
    </ForwardRef(DialogActions)>
  </ForwardRef(Dialog)>
</Fragment>
`;

exports[`Shallow Snapshot Tests pc view 1`] = `
<Fragment>
  <ForwardRef(Box)
    sx={
      Object {
        "position": "relative",
        "width": "calc(100% - 500px)",
      }
    }
  >
    <TriviaMap
      endToSelectPosition={[Function]}
      hiddenMarkerIds={Array []}
      newMarkerMode={false}
      onClickPostTitle={[Function]}
    />
    <FloatingButton
      color="primary"
      disabled={false}
      icon="add"
      onClick={[Function]}
    />
    <LoadingProgressBar />
  </ForwardRef(Box)>
  <BoxModal
    onClose={[Function]}
    open={false}
  />
  <DeletingConfirmModal
    onClickCancel={[Function]}
    onClickConfirm={[Function]}
    open={false}
  />
  <ForwardRef(Drawer)
    anchor="right"
    open={true}
    sx={
      Object {
        "& .MuiDrawer-paper": Object {
          "width": 500,
        },
        "flexShrink": 0,
        "width": 500,
      }
    }
    variant="persistent"
  >
    <ArticleForm
      onClickSelectPosition={[Function]}
      onClose={[Function]}
    />
  </ForwardRef(Drawer)>
  <GlobalMessage
    closeArticleModal={[Function]}
    closeFormModal={[Function]}
  />
  <ForwardRef(Dialog)
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(DialogTitle)>
      入力内容の変更が保存されていません。
    </ForwardRef(DialogTitle)>
    <ForwardRef(DialogContent)>
      <ForwardRef(DialogContentText)>
        現在編集中の投稿を「下書き保存」、「保存して公開」、または「編集を破棄」してからもう一度お試しください。
      </ForwardRef(DialogContentText)>
    </ForwardRef(DialogContent)>
    <ForwardRef(DialogActions)>
      <ForwardRef(Button)
        onClick={[Function]}
        variant="outlined"
      >
        閉じる
      </ForwardRef(Button)>
    </ForwardRef(DialogActions)>
  </ForwardRef(Dialog)>
</Fragment>
`;
